--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="Angel Torosio Montero" />
-    <title> Modern Business - Angel Torosio Montero </title>
+    <title> Modern Business - Angelsdl </title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
 
@@ -20,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="index.html"> Angel Torosio Montero </a>
+                <a class="navbar-brand" href="index.html"> Angelsdl </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span
@@ -54,8 +53,8 @@
                             <h1 class="display-5 fw-bolder mb-2">Mi Negocio</h1>
                             <p class="lead fw-normal mb-4">Asociación de personas</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"> <a
-                                    class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a> <a
-                                    class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a> </div>
+                                    class="btn btn-primary btn-lg px-4 me-sm-3" href="#features"> Actividades </a> <a
+                                    class="btn btn-outline-light btn-lg px-4" href="contact.html"> Descubre más </a> </div>
                         </div>
                     </div>
                     <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"> <img class="img-fluid rounded-3 my-5"
