--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <!-- Contact cards-->
-                    <div class="d-flex justify-content-center py-5">
+                    <div class="d-flex justify-content-center py-5 w-100">
                         <div class="row gx-5 row-cols-2">
                             <div class="col">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
@@ -89,13 +89,14 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2024</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
+                        <div class="small m-0 text-white"> Copyright &copy; 2024</div>
+                    </div>
+                    <div class="col-auto">
+                        <span class="text-white mx-1">&middot;<i class="bi bi-twitter-x"></i></span>
+                        <span class="text-white mx-1"><i class="bi bi-instagram"></i></span>
+                        <span class="text-white mx-1"><i class="bi bi-facebook"></i></span>
+                        <span class="text-white mx-1"><i class="bi bi-linkedin"></i>&middot;</span>
                     </div>
                 </div>
             </div>
