--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <!-- Contact cards-->
-                    <div class="d-flex justify-content-center py-5 w-100">
+                    <div class="d-flex justify-content-center py-5">
                         <div class="row gx-5 row-cols-2">
                             <div class="col">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
@@ -78,7 +78,7 @@
                             </div>
                             <div class="col">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
-                                <div class="h5"> Descubre nuestras actividades </div>
+                                <div class="h5 w-50"> Descubre nuestras actividades </div>
                                 <p class="text-muted mb-0"> En nuestras redes sociales X o Instagram, podrás descubrir nuestras actividades </p>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-dark py-4 mt-auto w-100">
+        <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto">
@@ -100,8 +100,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- Bootstrap core JS-->
+        </footer>       <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
