--- a/contact.html
+++ b/contact.html
@@ -71,14 +71,14 @@
                     <!-- Contact cards-->
                     <div class="d-flex justify-content-center py-5">
                         <div class="row gx-5 row-cols-2">
-                            <div class="col">
+                            <div class="col-6">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
                                 <div class="h5 mb-2"> Habla con nosotros </div>
                                 <p class="text-muted mb-0"> Contacta con nosotros vía mail o número de teléfono </p>
                             </div>
-                            <div class="col">
+                            <div class="col-6">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
-                                <div class="h5 w-50"> Descubre nuestras actividades </div>
+                                <div class="h5"> Descubre nuestras actividades </div>
                                 <p class="text-muted mb-0"> En nuestras redes sociales X o Instagram, podrás descubrir nuestras actividades </p>
                             </div>
                         </div>
