--- a/contact.html
+++ b/contact.html
@@ -69,20 +69,23 @@
                         </div>
                     </div>
                     <!-- Contact cards-->
-                    <div class="d-flex justify-content-center py-5">
-                        <div class="row gx-5 row-cols-2">
-                            <div class="col-6">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
-                                <div class="h5 mb-2"> Habla con nosotros </div>
-                                <p class="text-muted mb-0"> Contacta con nosotros vía mail o número de teléfono </p>
-                            </div>
-                            <div class="col-6">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
-                                <div class="h5"> Descubre nuestras actividades </div>
-                                <p class="text-muted mb-0"> En nuestras redes sociales X o Instagram, podrás descubrir nuestras actividades </p>
+                    <div class="container py-5">
+                        <div class="d-flex justify-content-center">
+                            <div class="row gx-5 row-cols-1 row-cols-md-2">
+                                <div class="col">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
+                                    <div class="h5 mb-2">Habla con nosotros</div>
+                                    <p class="text-muted mb-0">Contacta con nosotros vía mail o número de teléfono</p>
+                                </div>
+                                <div class="col">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
+                                    <div class="h5">Descubre nuestras actividades</div>
+                                    <p class="text-muted mb-0">En nuestras redes sociales X o Instagram, podrás descubrir nuestras actividades</p>
+                                </div>
                             </div>
                         </div>
-                    </div>                                        
+                    </div>
+                                                            
             </section>
         </main>
         <!-- Footer-->
