Anadido Carousel, modificado landpage y link de afiliado

--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html"> Inicio </a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html"> Acerca de </a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html"> Contacto </a></li>
-                            <li class="nav-item"><a class="nav-link" href="pricing.html"> Precios </a></li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Proyectos </a>
-                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                                    <li><a class="dropdown-item text-black-50 elementHovBackBlack" href="portfolio-overview.html"> Proyecto 1 </a></li>
-                                    <li><a class="dropdown-item text-black-50 elementHovBackBlack" href="portfolio-item.html"> Proyecto 2 </a></li>
-                                </ul>
-                            </li>
+                            <li class="nav-item"><a class="nav-link" href="colaboradores.html"> Colaboradores </a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,10 +40,10 @@
                             <p class="lead fw-normal text-muted mb-0"> Nos encantaría saber de ti </p>
                         </div>
                         <div class="row gx-5 justify-content-center">
-                                <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                                <form id="contactForm">
                                     <div class="form-floating mb-3"> 
-                                        <p class="custom-text custom-text-center">Teléfono de contacto:</p> 
-                                    </div> 
+                                        <p class="custom-text custom-text-center"> Link de afiliado: </p> 
+                                    </div>
                                     <div class="form-floating mb-3"> 
                                         <p class="custom-text custom-text-center">Correo electrónico:</p> 
                                     </div>
