--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html"> Inicio </a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html"> Acerca de </a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html"> Contacto </a></li>
-                            <li class="nav-item"><a class="nav-link" href="pricing.html"> Precios </a></li>
+                            <li class="nav-item"><a class="nav-link" href="colaboradores.html"> Colaboradores </a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Proyectos </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
