--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html"> Inicio </a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html"> Acerca de </a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html"> Contacto </a></li>
-                        <li class="nav-item"><a class="nav-link" href="pricing.html"> Precios </a></li>
+                        <li class="nav-item"><a class="nav-link" href="colaboradores.html"> Colaboradores </a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false"> Proyectos </a>
@@ -52,9 +52,6 @@
                         <div class="my-5 text-center text-xl-start">
                             <h1 class="display-5 fw-bolder mb-2">Mi Negocio</h1>
                             <p class="lead fw-normal mb-4">Asociación de personas</p>
-                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"> <a
-                                    class="btn btn-primary btn-lg px-4 me-sm-3" href="#features"> Actividades </a> <a
-                                    class="btn btn-outline-light btn-lg px-4" href="contact.html"> Descubre más </a> </div>
                         </div>
                     </div>
                     <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"> <img class="img-fluid rounded-3 my-5"
@@ -63,69 +60,6 @@
             </div>
         </header>
         <!-- Features section-->
-        <section class="py-5 section-custom" id="features">
-            <div class="container px-5 my-5">
-                <div class="row gx-5">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h2 class="fw-bolder mb-0"> Nuestros proyectos </h2>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="row gx-5 row-cols-1 row-cols-md-2">
-                            <div class="col mb-5 h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-collection"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
-                            </div>
-                            <div class="col mb-5 h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-building"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
-                            </div>
-                            <div class="col mb-5 mb-md-0 h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-toggles2"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
-                            </div>
-                            <div class="col h-100">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-toggles2"></i></div>
-                                <h2 class="h5"> Titulo de proyecto </h2>
-                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
-                                    just a bit more text.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Testimonial section-->
-        <div class="py-5 bg-light testimonial-section">
-            <div class="container px-5 my-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-lg-10 col-xl-7">
-                        <div class="text-center">
-                            <div class="fs-4 mb-4 fst-italic">"Frase de Redes Sociales"</div>
-                            <div class="d-flex align-items-center justify-content-center">
-                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                                    alt="..." />
-                                <div class="fw-bold">
-                                    Sin Nombre
-                                    <span class="fw-bold text-primary mx-1">/</span>
-                                    CEO, Pomodoro
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Blog preview section-->
         <section class="py-5">
             <div class="container px-5 my-5">
                 <div class="row gx-5 justify-content-center">
@@ -207,6 +141,69 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Testimonial section-->
+        <div class="py-5 bg-light testimonial-section">
+            <div class="container px-5 my-5">
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-lg-10 col-xl-7">
+                        <div class="text-center">
+                            <div class="fs-4 mb-4 fst-italic">"Frase de Redes Sociales"</div>
+                            <div class="d-flex align-items-center justify-content-center">
+                                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                                    alt="..." />
+                                <div class="fw-bold">
+                                    Sin Nombre
+                                    <span class="fw-bold text-primary mx-1">/</span>
+                                    CEO, Pomodoro
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Blog preview section-->
+        <section class="py-5 section-custom" id="features">
+            <div class="container px-5 my-5">
+                <div class="row gx-5">
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h2 class="fw-bolder mb-0"> Nuestros proyectos </h2>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="row gx-5 row-cols-1 row-cols-md-2">
+                            <div class="col mb-5 h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                        class="bi bi-collection"></i></div>
+                                <h2 class="h5"> Titulo de proyecto </h2>
+                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
+                                    just a bit more text.</p>
+                            </div>
+                            <div class="col mb-5 h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                        class="bi bi-building"></i></div>
+                                <h2 class="h5"> Titulo de proyecto </h2>
+                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
+                                    just a bit more text.</p>
+                            </div>
+                            <div class="col mb-5 mb-md-0 h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                        class="bi bi-toggles2"></i></div>
+                                <h2 class="h5"> Titulo de proyecto </h2>
+                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
+                                    just a bit more text.</p>
+                            </div>
+                            <div class="col h-100">
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                        class="bi bi-toggles2"></i></div>
+                                <h2 class="h5"> Titulo de proyecto </h2>
+                                <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is
+                                    just a bit more text.</p>
                             </div>
                         </div>
                     </div>
